--- a/src/containers/about/theLandsSection/theLandsSection.module.css
+++ b/src/containers/about/theLandsSection/theLandsSection.module.css
@@ -70,12 +70,12 @@
 
 
     .container[data-animate="true"]>div {
-        animation: anim-opacity 5s forwards;
-        animation-delay: 1s;
+        animation: anim-opacity 2s forwards;
+        animation-delay: 0.1s;
     }
 
     .container[data-animate="true"] .curve {
-        animation: anim-wave 5s infinite;
+        animation: anim-wave 2s infinite;
     }
 
     @keyframes anim-opacity {
